Build my ahoami

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,41 +4,79 @@ on:
     tags:
       - v*
 
+  workflow_dispatch:
+
 jobs:
-  release:
-    name: Release Process
+  build_test:
+    name: Build App
     runs-on: ubuntu-latest
-    env:
-      GO_VERSION: 1.17
-      SEIHON_VERSION: v0.9.0
-      CGO_ENABLED: 0
+    strategy:
+      matrix:
+        node-version: [14.x]
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: setup node
+        uses: actions/setup-node@master
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      # install applicaion dependencies
+      - name: Install dependencies
+        run: |
+          npm install
+          npm ci 
+      # build the apps     
+      - name: build
+        run: |
+          npm run build
+
+  push_to_Docker_Hub:
+    name: Push Images to DockerHub
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    # build docker image and push to docker hub
+    # only if the app build and test successfully
+    needs: [build_test]
 
     steps:
-
-      # https://github.com/marketplace/actions/setup-go-environment
-      - name: Set up Go ${{ env.GO_VERSION }}
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      # https://github.com/marketplace/actions/checkout
-      - name: Check out code
+      - name: checkout repo
         uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+    
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          fetch-depth: 0
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Install Docker image multi-arch builder
-      - name: Install seihon ${{ env.SEIHON_VERSION }}
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/ldez/seihon/master/godownloader.sh | sh -s -- -b $(go env GOPATH)/bin ${SEIHON_VERSION}
-          seihon --version
 
-      - name: Docker Login
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo "${DOCKER_PASSWORD}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
-
-      - name: Deploy Docker Images (seihon)
-        run: make publish-images
+      # - name: Branch name
+      #   id: branch_name
+      #   run: |
+      #     echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
+      #     echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
+      #     echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+    
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/whoami-no-cors:0.1.0
+        
+      - name: Run the image in a container
+        uses: addnab/docker-run-action@v3
+        with:
+          image: ${{ secrets.DOCKER_USERNAME }}/whoami-no-cors:0.1.0
+          run: |
+            echo "runing the docker image"
+            echo "Testing the nodejs  app endpoints"
+            echo ${{ steps.docker_build.outputs.digest }}
