--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,9 +28,9 @@ jobs:
           npm install
           npm ci 
       # build the apps     
-      - name: build
-        run: |
-          npm run build
+      # - name: build
+      #   run: |
+      #     npm run build
 
   push_to_Docker_Hub:
     name: Push Images to DockerHub
